--- a/app/src/main/res/layout/answer_layout.xml
+++ b/app/src/main/res/layout/answer_layout.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:padding="10dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
