added styles to profile

--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -148,7 +148,7 @@
         app:srcCompat="@drawable/images" />
 
     <ImageButton
-        android:id="@+id/home"
+        android:id="@+id/btnhome"
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="43dp"
         android:layout_height="45dp"
