--- a/app/src/main/res/layout/activity_forgotpassword2.xml
+++ b/app/src/main/res/layout/activity_forgotpassword2.xml
@@ -155,7 +155,7 @@
 
 
     <ImageButton
-        android:id="@+id/home"
+        android:id="@+id/btnhome"
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="43dp"
         android:layout_height="45dp"
