--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -152,7 +152,7 @@
         app:srcCompat="@drawable/contphn" />
 
     <ImageButton
-        android:id="@+id/home"
+        android:id="@+id/btnhome"
         style="@android:style/Widget.Holo.Light.ImageButton"
         android:layout_width="43dp"
         android:layout_height="45dp"
