--- a/app/src/main/res/layout/answer_layout.xml
+++ b/app/src/main/res/layout/answer_layout.xml
@@ -36,6 +36,22 @@
                 />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="end|center_vertical"
+            >
+
+        <ImageButton
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_edit"
+            android:text="Update"
+            android:visibility="visible" />
 
         <ImageButton
             android:id="@+id/btnDelete"
@@ -45,6 +61,10 @@
             android:background="@android:color/transparent"
             android:src="@drawable/ic_delete_forever_black_24dp"
             android:text="Delete"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:layout_marginLeft="10dp"
+            />
+
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
